# jasmin-services

./: .git-blame-ignore-revs  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-JASMIN.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: black.yml  tox.yaml
docs/: grant-lifecycle.md
jasmin_metadata/: __init__.py  admin.py  apps.py  forms.py
jasmin_metadata/migrations/: 0001_initial.py  0002_auto_20170125_1755.py  0003_auto_20220207_1359.py
jasmin_metadata/models/: __init__.py  base.py  forms.py
jasmin_metadata/static/admin/metadata/: formfield_inlines.js  jquery.initialize.js
jasmin_metadata/templates/admin/: change_form_metadata.html
jasmin_services/: __init__.py  actions.py  admin.py  apps.py  backends.py  errors.py  forms.py  notifications.py  urls.py  views.py  widgets.py
jasmin_services/admin/: __init__.py  behaviour.py  dashboard.py  filters.py  grant.py  request.py
jasmin_services/api/: filters.py  schemas.py  scopes.py  serializers.py  urls.py  views.py  viewsets.py
jasmin_services/api/views/: __init__.py  categories.py  grants.py  services.py  users.py
jasmin_services/forms/: __init__.py  decision_form.py  ldap_admin.py
jasmin_services/management/commands/: __init__.py  pending_summary.py  populate_revoked_at.py  services_remind_pending.py  services_send_notifications.py  services_sync_access.py
jasmin_services/migrations/: 0001_initial.py  0002_auto_20170112_1657.py  0002_role_auto_accept.py  0003_add_ldap_model_fields.py  0003_service_approver_message.py  0004_migrate_ldap_group_data.py  0005_remove_group_dn_field.py  0006_flexible_roles_additions.py  0007_flexible_roles_migrate_data.py  0008_flexible_roles_deletions.py  0009_migrate_deputy_manager.py  0010_auto_20190916_1328.py  0011_auto_20201016_1232.py  0011_auto_20210224_1000.py  0011_auto_20210308_0936.py  0011_auto_20210317_0804.py  0011_auto_20210401_0956.py  0012_auto_20211108_1329.py  0012_auto_20211108_1330.py  0012_new_grant_additions.py  0013_auto_20211108_1404.py  0013_new_grant_additions.py  0013_new_grant_migrate_data.py  0014_new_grant_deletions.py  0014_new_grant_migrate_data.py  0015_auto_20201019_0757.py  0015_new_grant_deletions.py  0016_auto_20210218_1215.py  0016_new_grant_clean.py  0017_auto_20210614_1452.py  0017_auto_20220207_1359.py  0017_grant_role_permision.py  0018_grant_role_permision.py  0018_revoke_permision.py  0019_revoke_permision.py  0020_service_disabled.py  0021_auto_20220914_0852.py  0022_rename_instution_countries.py  0023_alter_service_institution_countries.py  0024_grant_revoked_at_alter_behaviour_polymorphic_ctype.py  (+5 more)
jasmin_services/models/: __init__.py  access.py  access_control.py  auth.py  base.py  behaviours.py  category.py  grant.py  ldap.py  request.py  role.py  service.py
jasmin_services/models/behaviours/: __init__.py  base.py  keycloak.py  ldap.py  mail.py
jasmin_services/static/admin/css/: aside.css
jasmin_services/static/admin/js/: admin_gfk_objectid_widget.js  collapsible_inlines.js
jasmin_services/static/jasmin_services/css/: multi-select.css
jasmin_services/static/jasmin_services/js/: request_decide.js
jasmin_services/templates/admin/jasmin_services/: dashboard.html
jasmin_services/templates/admin/jasmin_services/category/: change_form.html
jasmin_services/templates/admin/jasmin_services/grant/: bulk_revoke.html  change_form.html
jasmin_services/templates/admin/jasmin_services/request/: decide.html
jasmin_services/templates/admin/jasmin_services/service/: change_form.html  email_message.txt  message.html  retire.html
jasmin_services/templates/jasmin_notifications/mail/grant_created/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/mail/grant_expired/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/mail/grant_expiring/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/mail/grant_revoked/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/mail/pending_summary/: content.txt
jasmin_services/templates/jasmin_notifications/mail/request_confirm/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/mail/request_incomplete/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/mail/request_pending/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/mail/request_rejected/: content.txt  subject.txt
jasmin_services/templates/jasmin_notifications/messages/: grant_created.html  grant_expired.html  grant_expiring.html  grant_revoked.html  request_incomplete.html  request_pending.html  request_rejected.html
jasmin_services/templates/jasmin_services/: email_message.txt  grant_review.html  request_decide.html  role_apply.html  service_base.html  service_details.html  service_grant.html  service_group.html  service_list.html  service_message.html  service_object_store_access_keys.html  service_object_store_create_access_key.html  service_object_store_create_token.html  service_object_store_get_access_key.html  service_object_store_tokens.html  service_requests.html  service_users.html
jasmin_services/templates/jasmin_services/includes/: display_accesses.html  display_metadata.html  pagination_links.html  role_badge.html  service_list_item.html  service_tabs.html
jasmin_services/templates/jasmin_services/my_services/: service_list.html
jasmin_services/templates/jasmin_services/my_services/includes/: service_list_item.html
jasmin_services/templatetags/: country_tags.py  pretty_name.py  service_tags.py
jasmin_services/tests/: cases.py  test_account_reactivation.py  test_admin_metadata_search.py  test_api.py  test_reverse_dns.py
jasmin_services/views/: __init__.py  common.py  grant_review.py  grant_role.py  mixins.py  my_services.py  request_decide.py  reverse_dns_check.py  role_apply.py  service_details.py  service_list.py  service_message.py  service_requests.py  service_users.py
tests/: settings.py  urls.py
