[tool.poetry]
name = "jasmin-services"
version = "1.1.7"
description = "Django application for managing services, roles and access."
authors = ["Matt Pryor <matt.pryor@stfc.ac.uk>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"

# Dependencies of dependencies. Need to specify here so poetry knows where to get them from.
jasmin-ldap = {git = "https://github.com/cedadev/jasmin-ldap.git", tag = "v1.0.0"}
jasmin-django-utils = {git = "https://github.com/cedadev/jasmin-django-utils.git", tag = "v1.0.6" }# Also required for API.

Django = "~3.2"
django-bootstrap5 = ">=21.2,<=23.1"
django-markdown-deux = "^1.0.5"
python-dateutil = "^2.8.2"
django-polymorphic = "^3.1.0"
requests = "^2.27.1"
jasmin-ldap-django = {git = "https://github.com/cedadev/jasmin-ldap-django.git", tag = "v1.0.1"}
jasmin-metadata = {git = "https://github.com/cedadev/jasmin-metadata.git", tag = "v1.0.0"}
jasmin-notifications = {git = "https://github.com/cedadev/jasmin-notifications.git", tag = "v1.1.0"}
django-countries = "^7.2.1, !=7.3.0"
djangorestframework = {version = "^3.13.1", optional = true}
django-filter = {version = ">=21.1,<=23.1", optional = true}
drf-spectacular = {version=">=0.22.0,<=0.26.1", optional = true}
drf-spectacular-sidecar = {version="^2023.4.1", optional = true}
python-keycloak = {version = "^2.15.3", optional = true, python = ">3.7"}

[tool.poetry.extras]
api = ["djangorestframework", "django-filter", "drf-spectacular", "drf-spectacular-sidecar"]
keycloak = ["python-keycloak"]

[tool.poetry.group.dev.dependencies]
tox = "^4.4.12"
pytest = "^7.3.1"
black = "^23.1.0"
isort = "^5.10.1"
mypy = ">= 0.980"
types-python-dateutil = "^2.8.19.12"
django-stubs = {extras = ["compatible-mypy"], version = "^1.16.0"}

[tool.poetry.group.test.dependencies]
django-oauth-toolkit = "^1.7.0"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict = false

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pydocstyle]
ignore = ['D106']

[tool.pylint.'MESSAGES CONTROL']
disable = ['too-few-public-methods', 'missing-class-docstring']

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=59.6.0"]
build-backend = "poetry.core.masonry.api"
